--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,7 @@
-FROM node:22 AS build
-WORKDIR /app
-COPY . .
-RUN npm install && npm run build
-
 FROM node:22-slim
 WORKDIR /app
-COPY --from=build /app ./
+COPY package*.json ./
+RUN npm install
+COPY . .
 EXPOSE 3300
-CMD ["npm", "run", "preview"]  # или "start", если это SSR
+CMD ["npm", "run", "dev"]
