--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -23,30 +23,13 @@ jobs:
           npm run build
         working-directory: frontend
 
-      - name: Archive production build
-        uses: actions/upload-artifact@v4
-        with:
-          name: build
-          path: frontend/build/
-
-  deploy:
-    needs: build-and-deploy
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-
-      - name: Deploy to Server via SSH
+      - name: Deploy to Server via SCP
         uses: appleboy/scp-action@v0.1.6
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          # port: ${{ secrets.SERVER_PORT }}
-          source: "build/"
+          source: "frontend/build/"
           target: "/home/deploy/orioncrew/frontend"
 
       - name: Restart Nginx
@@ -55,6 +38,5 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          # port: ${{ secrets.SERVER_PORT }}
           script: |
             sudo systemctl restart nginx
