--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Deploy to Server via SCP
         uses: appleboy/scp-action@v0.1.6
         with:
-          host: ${{ secrets.SERVER_HOST }}
+          host: 217.25.88.96
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "frontend/build/"
@@ -35,7 +35,7 @@ jobs:
       - name: Restart Nginx
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ secrets.SERVER_HOST }}
+          host: 217.25.88.96
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
