--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -24,13 +24,16 @@ jobs:
           npm run build
         working-directory: frontend
 
+      - name: Проверка содержимого dist
+        run: ls -la frontend/dist
+
       - name: Deploy to Server via SSH
         uses: appleboy/scp-action@v0.1.6
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "./dist/"
+          source: "frontend/dist/"
           target: "/home/deploy/orioncrew/frontend"
 
       - name: Restart Nginx
