--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "@elysiajs/node": "1.3.0",
+    "dotenv": "^16.5.0",
     "elysia": "1.3.3",
     "grammy": "1.36.3"
   },
