--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -8,28 +8,31 @@ on:
       - 'backend/**'
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     environment: production
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup SSH
-      uses: webfactory/ssh-agent@v0.7.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Copy backend to server via SCP
+        uses: appleboy/scp-action@v0.1.6
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "backend/"
+          target: "/crew-backend"
 
-    - name: Copy backend to remote server
-      run: |
-        rsync -avz --delete ./backend/ ${{ secrets.SSH_USER }}@217.25.88.96:/crew-backend
-
-    - name: Run docker-compose on remote server
-      run: |
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-          cd /crew-backend
-          export BOT_TOKEN="${{ secrets.BOT_TOKEN }}"
-          docker-compose down
-          BOT_TOKEN=$BOT_TOKEN docker-compose up -d --build
-        EOF
+      - name: Run docker-compose via SSH
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /crew-backend
+            export BOT_TOKEN="${{ secrets.BOT_TOKEN }}"
+            docker-compose down
+            BOT_TOKEN=$BOT_TOKEN docker-compose up -d --build
