--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -33,6 +33,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /crew-backend/backend
+            npm install
+            npm run build
             export BOT_TOKEN="${{ secrets.BOT_TOKEN }}"
             docker-compose down
             BOT_TOKEN=$BOT_TOKEN docker-compose up -d --build
