--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,7 @@ WORKDIR /app
 
 COPY . .
 
+RUN npm install elysia @elysiajs/node && \
+    npm install --save-dev tsx @types/node typescript
+
 CMD ["npm", "run", "dev"]
