--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -34,6 +34,8 @@ jobs:
           script: |
             cd /crew-backend/backend
             npm install
+            npm install elysia @elysiajs/node
+            npm install --save-dev tsx @types/node typescript
             export BOT_TOKEN="${{ secrets.BOT_TOKEN }}"
             docker-compose down
             BOT_TOKEN=$BOT_TOKEN docker-compose up -d --build
