--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,15 @@
   "license": "ISC",
   "dependencies": {
     "@elysiajs/node": "1.3.0",
+    "csvtojson": "2.0.10",
     "dotenv": "^16.5.0",
     "elysia": "1.3.3",
-    "grammy": "1.36.3"
+    "grammy": "1.36.3",
+    "node-schedule": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "22.15.30",
+    "@types/node-schedule": "^2.1.7",
     "tsx": "4.19.4",
     "typescript": "5.8.3"
   },
