--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,7 @@
       "experimentalDecorators": true,
       "allowSyntheticDefaultImports": true,
       "target": "es2021",
-      "sourceMap": true,
+      "sourceMap": false,
       "outDir": "./dist",
       "baseUrl": "./",
       "incremental": true,
@@ -17,7 +17,7 @@
       "noImplicitAny": false,
       "strictBindCallApply": false,
       "forceConsistentCasingInFileNames": false,
-      "esModuleInterop": true,
+      "esModuleInterop": false,
       "noFallthroughCasesInSwitch": false
     },
     "exclude": [
