--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "csvtojson": "2.0.10",
     "dotenv": "^16.5.0",
     "elysia": "1.3.3",
+    "googleapis": "^150.0.1",
     "grammy": "1.36.3",
     "node-schedule": "^2.1.1"
   },
