--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "@elysiajs/node": "1.3.0",
+    "@elysiajs/cors": "^1.3.3",
     "csvtojson": "2.0.10",
     "dotenv": "^16.5.0",
     "elysia": "1.3.3",
