--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,21 @@
     "@elysiajs/cors": "^1.3.3",
     "csvtojson": "2.0.10",
     "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
     "elysia": "1.3.3",
     "googleapis": "^150.0.1",
     "grammy": "1.36.3",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/node": "22.15.30",
     "@types/node-schedule": "^2.1.7",
+    "@types/pg": "^8.15.4",
+    "@sinclair/typebox": "0.34.38",
+    "drizzle-kit": "^0.31.4",
     "tsx": "4.19.4",
+    "type-fest": "^4.20.1",
     "typescript": "5.8.3"
   },
   "scripts": {
