--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.9.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0"
   },
